<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <TextView
        android:id="@+id/finreto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fin_reto"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_light"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:textAlignment="center">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Tu Reto:"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/resultado_jugador_IV"
            android:layout_width="72dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="2"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/resultadojugador_nombreTV"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/jugador"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/resultadojugador_puntosTV"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="+ 10"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:textAlignment="center">

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/resultado_de_tu_rival"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/resultado_rival_IV"
            android:layout_width="72dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="2"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/resultado_rival_nombreTV"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Rival"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/resultado_rival_puntosTV"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="- 1"
            android:textAlignment="center"
            android:textSize="24sp" />


    </LinearLayout>

    <ImageButton
        android:id="@+id/resultado_OK_BTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/flecha" />
</LinearLayout>